--- a/src/main/resources/database-config.properties
+++ b/src/main/resources/database-config.properties
@@ -3,4 +3,4 @@ jdbc.url=jdbc:mysql://localhost:3306/spring_facebook_login?createDatabaseIfNotEx
 jdbc.username=admin
 jdbc.password=salmos89
 
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
